[package]
name = "libera"
description = "a suite of liberating libraries"
version = "0.0.3"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/libera"
documentation = "https://docs.rs/libera"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/src/**/*.md",
	"/Cargo.toml",
	"/res/*.html",
	"/README.md",
	"/LICENSE-*",
]
categories = []
keywords = []
publish = true

[dependencies]

[features]
default = ["std"]
std = []

[dev-dependencies]


[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = [ "--html-in-header", "./res/rustdoc-header.html" ]
