[package]
name = "_CRATENAME_"
description = ""
version = "0.0.0"
edition = "2021"
resolver = "2"
rust-version = "1.63.0"
authors = ["NAME <email@domain>"]
# repository = "https://github.com/_USER_/_CRATENAME_"
# documentation = "https://docs.rs/_CRATENAME_"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/res/*",
	"/README.md",
	"/LICENSE-*",
]
categories = []
keywords = []
publish = false

[dependencies]

[features]
default = ["std"]
std = []

[dev-dependencies]

[build-dependencies]

# [[example]]
# name = "hello_world"
# required-features = [""]

[package.metadata.docs.rs]
# rustdoc-args = [ "--html-in-header", "./res/header.html" ]

[badges]
# actively-developed, passively-maintained, looking-for-maintainer, as-is,
# experimental, deprecated, none
maintenance = { status = "experimental" }
